package model.abstracted;

public interface Eatable {}
